--- a/Tasks/client/main.css
+++ b/Tasks/client/main.css
@@ -1,6 +1,11 @@
 /* CSS declarations go here */
 .container {
     padding:10px 0 10px 0;
+    min-width:500px;
     max-width:800px;
     border: 3px solid grey;
+}
+
+form div {
+    margin-bottom:10px;
 }
