--- a/Tasks/client/main.css
+++ b/Tasks/client/main.css
@@ -1,11 +1,38 @@
 /* CSS declarations go here */
 .container {
-    padding:10px 0 10px 0;
-    min-width:500px;
-    max-width:800px;
+    padding: 10px 0 10px 0;
+    min-width: 500px;
+    max-width: 800px;
     border: 3px solid grey;
 }
 
+#allTasksList {
+    margin-right: 15px;
+    margin-left: 15px;
+}
+
 form div {
-    margin-bottom:10px;
+    margin-bottom: 10px;
+}
+
+.title {
+    margin-top: 15px;
+    text-align: center;
+    font-size: 1em;
+}
+
+.title div {
+    border-right: 1px solid grey;
+}
+
+.title div p {
+    margin: 0;
+}
+#addATaskOuterDiv {
+    margin: 0 15px;
+    border-bottom: 1px dotted darkgray;
+}
+
+#addATaskForm div{
+    padding: 0 3px;
 }
