--- a/Tasks/client/main.css
+++ b/Tasks/client/main.css
@@ -1,9 +1,8 @@
 /* CSS declarations go here */
 .container {
-    padding: 10px 0 10px 0;
+    padding: 0 0 10px 0;
     min-width: 500px;
     max-width: 1000px;
-    border: 3px solid grey;
 }
 
 #allTasksList {
